added an image and changed some text

--- a/Choosyourownadventure/Choosyourownadventure.csproj
+++ b/Choosyourownadventure/Choosyourownadventure.csproj
@@ -164,5 +164,14 @@
   <ItemGroup>
     <None Include="Resources\Classroom.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Image1.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\another hallway.jfif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\another hallway1.jfif" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
