--- a/Choosyourownadventure/Choosyourownadventure.csproj
+++ b/Choosyourownadventure/Choosyourownadventure.csproj
@@ -185,5 +185,8 @@
   <ItemGroup>
     <None Include="Resources\Arrow1.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Game Over 3.jpeg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
